--- a/stage02/index.html
+++ b/stage02/index.html
@@ -44,7 +44,7 @@
 
           <ul class="social-links">
             <li>
-              <a target="_blank" href="https://instagram.com/maykbrito"
+              <a target="_blank" href="https://instagram.com/m4goth"
                 ><svg
                   width="24"
                   height="24"
@@ -77,7 +77,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://facebook.com/maykbrito">
+              <a target="_blank" href="https://facebook.com">
                 <svg
                   width="24"
                   height="24"
@@ -96,7 +96,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://youtube.com/maykbrito">
+              <a target="_blank" href="https://youtube.com">
                 <svg
                   width="24"
                   height="24"
